# box_dyn_fn_question

./: Cargo.toml  local.fgb  local.gpkg
src/: iteratorissue.rs  main.rs
