[package]
name = "questionsample"
version = "0.1.0"
edition = "2018"

[dependencies]
bzip2 = "0.3"
flate2 = "1.0"
crossbeam-channel = "0.5"
geo = "0.23"
rstar = "0.9"
proj="0.27"
quick-xml = {version = "0.23", features = ["encoding"]}
# ^ 0.23 because newer version does not compile in Ubuntu's rust
